# db-migration-validator-web

./: .gitignore  app.py  db.py  importer.py  pyproject.toml
docs/: mapping_template_guide.md
static/css/: style.css
static/js/: app.js  mapping_generator.js
templates/: base.html  index.html  mapping_generator.html  records.html  run_detail.html
templates/components/: pagination.html  record_card.html
