[project]
name = "db-migration-validator-web"
version = "0.1.0"
description = "Web viewer and mapping config generator for db-migration-validator"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "templates/**", "static/**"]
